* add tests for PostService * change Date to Instant