@@ -3,23 +3,24 @@ package pl.vemu.sociely.services;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mapstruct.factory.Mappers;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.test.util.ReflectionTestUtils;
 import pl.vemu.sociely.dtos.request.UserDtoRequest;
 import pl.vemu.sociely.entities.User;
 import pl.vemu.sociely.exceptions.user.UserByIdNotFound;
 import pl.vemu.sociely.exceptions.user.UserWithEmailAlreadyExist;
 import pl.vemu.sociely.mappers.UserMapper;
-import pl.vemu.sociely.mappers.UserMapperImpl;
 import pl.vemu.sociely.repositories.UserRepository;
 import pl.vemu.sociely.utils.Roles;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.IntStream;
@@ -31,14 +32,14 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class UserServiceTest {
 
-    private final List<User> users = new ArrayList<>(Arrays.asList(
-            new User(0L, "Jesse", "Pinkman", "elisabeth.goldner@yahoo.com",
-                     "$2a$12$oCXMCYmgaI/cVtUnUvcR3uSqAf6P8O9GQ.5rFjBuQb1Cl4wu5X1eC" /*password: uz2iov8599*/,
-                     Roles.USER, Collections.emptyList()
-            ), new User(1L, "Todd", "Alquist", "randall.muller@yahoo.com",
+    private final List<User> users = new ArrayList<>(
+            List.of(new User(1L, "Jesse", "Pinkman", "elisabeth.goldner@yahoo.com",
+                             "$2a$12$oCXMCYmgaI/cVtUnUvcR3uSqAf6P8O9GQ.5rFjBuQb1Cl4wu5X1eC" /*password: uz2iov8599*/,
+                             Roles.USER, Collections.emptyList()
+            ), new User(2L, "Todd", "Alquist", "randall.muller@yahoo.com",
                         "$2a$12$i8XVImk2GVR25s/JAEhw7OWx5Y8uE9G5AjHcNZSFjkUewbZVETevS" /*password: zt1uk678ydtck7*/,
                         Roles.ADMIN, Collections.emptyList()
-            ), new User(2L, "Adam", null, "joan.macejkovic@hotmail.com",
+            ), new User(3L, "Adam", null, "joan.macejkovic@hotmail.com",
                         "$2a$12$eX7ZhRC9Tw7GJTXLxwNcFutWbqSe22No4y6j1qFJoUPSReO9UkUka" /*password: 519kujoju*/,
                         Roles.MODERATOR, Collections.emptyList()
             )));
@@ -46,13 +47,16 @@ class UserServiceTest {
     UserRepository repository;
     @Spy
     BCryptPasswordEncoder encoder;
-    UserMapper mapper = new UserMapperImpl();
+
+    @Spy
+    UserMapper mapper = Mappers.getMapper(UserMapper.class);
+
+    @InjectMocks
     UserService service;
 
     @BeforeEach
     void setUp() {
-        mapper.setEncoder(encoder);
-        service = new UserService(repository, mapper);
+        ReflectionTestUtils.setField(mapper, "encoder", encoder);
     }
 
     @Test
@@ -85,8 +89,7 @@ class UserServiceTest {
             return invocation.getArgument(0);
         });
 
-        var userToSave =
-                new UserDtoRequest("Krazy", "Eight", users.get(0).getEmail(), "8vjfc4cp2chifwj");
+        var userToSave = new UserDtoRequest("Krazy", "Eight", users.get(0).getEmail(), "8vjfc4cp2chifwj");
         assertThrows(UserWithEmailAlreadyExist.class, () -> service.add(userToSave),
                      "User with email " + users.get(0).getEmail() + " already exist!"
         );
@@ -108,24 +111,21 @@ class UserServiceTest {
         when(repository.findByEmail(anyString())).then(invocation -> users.stream().filter(
                 user -> user.getEmail().equals(invocation.getArgument(0))).findFirst());
         when(repository.save(any(User.class))).then(invocation -> {
-            int index = IntStream.range(0, users.size())
-                    .filter(i -> users.get(i).getId().equals(
-                            ((User) invocation.getArgument(0)).getId())).findFirst().getAsInt();
+            int index = IntStream.range(0, users.size()).filter(i -> users.get(i).getId().equals(
+                    ((User) invocation.getArgument(0)).getId())).findFirst().getAsInt();
             users.set(index, invocation.getArgument(0));
             return invocation.getArgument(0);
         });
 
-        var userToUpdate =
-                new UserDtoRequest("Krazy", "Eight", users.get(2).getEmail(), "8vjfc4cp2chifwj");
+        var userToUpdate = new UserDtoRequest("Krazy", "Eight", users.get(2).getEmail(), "8vjfc4cp2chifwj");
 
         assertThrows(
                 UserByIdNotFound.class, () -> service.updateUser(-123L, userToUpdate), "User with id -123 not found!");
-        assertThrows(
-                UserWithEmailAlreadyExist.class, () -> service.updateUser(0L, userToUpdate),
-                "User with email " + users.get(2).getEmail() + " already exist!"
+        assertThrows(UserWithEmailAlreadyExist.class, () -> service.updateUser(1L, userToUpdate),
+                     "User with email " + users.get(2).getEmail() + " already exist!"
         );
         userToUpdate.setEmail("jed.carroll@yahoo.com");
-        var response = service.updateUser(0L, userToUpdate);
+        var response = service.updateUser(1L, userToUpdate);
         verify(repository).findByEmail(userToUpdate.getEmail());
         verify(repository).save(any(User.class));
         assertEquals(userToUpdate.getEmail(), response.email());
@@ -143,9 +143,9 @@ class UserServiceTest {
                 repository).deleteById(anyLong());
 
         var userToDelete = users.get(0);
-        service.delete(userToDelete.getId());
+        service.deleteById(userToDelete.getId());
 
-        assertThrows(UserByIdNotFound.class, () -> service.delete(-123L), "User with id -123 not found!");
+        assertThrows(UserByIdNotFound.class, () -> service.deleteById(-123L), "User with id -123 not found!");
         assertEquals(2, users.size());
         assertFalse(users.contains(userToDelete));
     }
